--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Home - Body */
 
 .main-content {
-  margin-top: 12em;
+  margin-top: 13em;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -203,6 +203,7 @@
 /* Projects - Body */
 
 .project-section {
+  margin-top: 10em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -303,7 +304,7 @@ card p {
 
 /* Contact - Body  */
 
-.container {
+.contact-container {
   margin-top: 8em;
 }
 
